[package]
name = "farsight"
version = "0.0.1"
edition = "2024"
publish = false

[profile.release]
lto = true
codegen-units = 1

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
farsight-common = { path = "../farsight-common", features = ["user"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
libc = "0.2"
bitflags = "2"
anyhow = "1"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
perfect_rand = "0.3"
env_logger = "0.11"
rand = "0.10"
rand_xoshiro = "0.8"
strength_reduce = "0.2"
serde_with = "3"
crossbeam-utils = "0.8"
crossbeam-epoch = "0.9"
crossbeam-queue = "0.3"
dashmap = "6"
clickhouse = { version = "0.15", features = ["default", "chrono"] }
chrono = "0.4"
ordered-float = "5.3"
fxhash = "0.2.1"
rtnetlink = "0.21"
surge-ping = "0.8"
futures = "0.3"
zerocopy = { version = "0.8", features = ["derive"] }

[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya" }
anyhow = "1"
farsight-ebpf = { path = "../farsight-ebpf" }

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Clink-arg=-Wl,--no-rosegment"]

[[bin]]
name = "farsight"
path = "src/main.rs"
